--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="header">
         <img class="logo" src="https://cdn.autodesk.io/logo/black/stacked.png" alt="Autodesk Platform Services">
-        <span class="title">Simple Viewer</span>
+        <span class="title">Black&Veatch</span>
         <select name="models" id="models"></select>
         <button id="upload" title="Upload New Model">Upload</button>
         <input style="display: none" type="file" id="input">
@@ -23,6 +23,20 @@
     <div id="overlay"></div>
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.js"></script>
     <script src="/main.js" type="module"></script>
+
+    
+    <div id="analytics">
+
+        <h1>Analytics</h1>
+        <h2>Enter your prompt here</h2>
+        <input type="text" id="fname" name="fname"><br><br>
+
+
+    </div> 
+
+
+
 </body>
+
 
 </html>
