--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,8 +27,8 @@
     
     <div id="analytics">
 
-        <h1>Analytics</h1>
-        <h2>Enter your prompt here</h2>
+        <h1 >Analytics</h1>
+        <h2 id="analyticss"><span>GPT Response: </span>Enter your prompt </h2>
         <input type="text" id="fname" name="fname"><br><br>
 
 
