--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,9 +27,19 @@
     
     <div id="analytics">
 
-        <h1 >Analytics</h1>
-        <h2 id="analyticss"><span>GPT Response: </span>Enter your prompt </h2>
+        <h1 >ChatBot</h1>
+        
+        <h2 id="analyticss"><span><img src="artificial-intelligence.png" alt="Girl in a jacket" id="ai"> </span>   <span id="gpt_response">Enter your prompt </span></h2>
         <input type="text" id="fname" name="fname"><br><br>
+
+        <div> 
+
+            <h3 id="query_type">Query type</h3>
+            <button type="button" id="type0">Type 0</button>
+            <button type="button" id="type1">Type 1</button>
+            <button type="button" id="type2">Type 2</button>
+
+        </div> 
 
 
     </div> 
