--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -466,8 +466,10 @@
                 <!-- End Title -->
                 <div class="input-style-1">
                   <input type="text" placeholder="Enter your prompt" id="fname"/>
-                  <span class="icon"> <i class="lni lni-angle-double-down" id="icons"></i> </span>
+                  <button class="btn btn-outline-secondary" type="button" id="buttonForm"><i class="lni lni-angle-double-down" id="icons"></i></button>
                 </div>
+
+       
                 <!-- <input type="text" id="fname" name="fname"><br><br>
                 <h3 id="query_type">Query type</h3> -->
                 <!-- <button type="button" id="type0">Type 0</button> -->
