--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -463,11 +463,11 @@
 
                 </div>
 
+                <div id="promptInput"></div>
+
                 <div class="author"><img src="./assets/images/robot.svg" alt="" class="fn__svg" /></div>
 
                 <p id="gpt_response">
-                  Lorem ipsum dolor sit amet, consect etur adipiscing
-                  elit Vivamus tortor.
                 </p>
                 <!-- End Title -->
                 <div class="input-style-1">
