--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -467,12 +467,15 @@
 
                 <div class="author"><img src="./assets/images/robot.svg" alt="" class="fn__svg" /></div>
 
-                <p id="gpt_response">
-                </p>
                 <!-- End Title -->
-                <div class="input-style-1">
+                <!-- <div class="input-style-1">
                   <input type="text" placeholder="Enter your prompt" id="fname"/>
                   <button class="btn btn-outline-secondary" type="button" id="buttonForm"><i class="lni lni-angle-double-down" id="icons"></i></button>
+                </div> -->
+
+                <div class="textarea-container">
+                  <textarea name="foo" placeholder="Enter your prompt" id="fname"></textarea>
+                  <button><i class="lni lni-arrow-down-circle"></i><span></span></button>
                 </div>
 
 
